[package]
name = "leptos_icons"
version = "0.3.1"
authors = ["Charles Edward Gagnon", "Bruno De Simone", "Lukas Potthast"]
edition = "2021"
rust-version = "1.75.0"
description = "Component library providing a variety of icons for the leptos web framework."
readme = "./README.md"
repository = "https://github.com/Carlosted/leptos-icons"
license = "MIT"
keywords = ["icons", "leptos"]
categories = ["web-programming"]

[dev-dependencies]
icondata = "0.3"

[dependencies]
icondata_core = "0.1"
leptos = "0.6"
