[package]
name = "leptos_icons"
version = "0.6.1"
authors = ["Charles Edward Gagnon", "Bruno De Simone", "Lukas Potthast"]
edition = "2021"
rust-version = "1.82.0"
description = "Component library providing a variety of icons for the leptos web framework."
readme = "./README.md"
repository = "https://github.com/Carlosted/leptos-icons"
license = "MIT"
keywords = ["icons", "leptos"]
categories = ["web-programming"]

[dev-dependencies]
icondata = "0.5"

[dependencies]
icondata_core = "0.1"
leptos = "0.8"

# For -Zminimal-versions
[target.'cfg(any())'.dependencies]
lazy_static = { version = "1.1", optional = true }
paste = { version = "1.0.4", optional = true }
log = { version = "0.4.6", optional = true }
encoding_rs = { version = "0.8.11", optional = true }
bytes = { version = "1.2", optional = true }
