[package]
name = "icondata_core"
version = "0.0.1"
authors = ["Charles Edward Gagnon"]
edition = "2021"
description = "Provides a common trait for representing svg icon data"
readme = "./README.md"
repository = "https://github.com/Carlosted/icondata"
license = "MIT"
keywords = ["icons"]
categories = ["web-programming"]
