[package]
name = "simple-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.2.1"
console_error_panic_hook = "0.1.7"
console_log = "0.2"
log = "0.4"
leptos-icons = { path = "../../", features = ["OcLgCheckCircleFill"] }
