[package]
name = "simple-app"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
leptos = { version = "0.5.4", features = ["csr"] }
leptos_icons = { path = "../..", default_features = false, features = [
    "AiCarryOutTwotone",
    "BiGraphql",
    "BiFilePlusSolid",
    "Bs1Circle",
    "BsFolder",
    "FaBarsSolid",
    "ImPagebreak",
    "ImPageBreak",
    "IoColorWand",
    "OcAlertSm",
    "OcAlertLg"
] }
log = "0.4"

[profile.release]
opt-level = "s"
lto = "thin"
debug = 0
