[package]
name = "theme-button"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.3", features = ["csr"] }
leptos_meta = { version = "0.6.3", features = ["csr"] }
leptos_icons = { path = "../.." }
icondata = "0.3.0"
web-sys = { version = "0.3.64", features = ["Window", "Storage"] }

console_error_panic_hook = "0.1.7"
console_log = "1"
log = "0.4"
